# cpp-tetris

./: .gitignore  CMakeLists.txt  README.md
include/: block.hpp  controller.hpp  game.hpp  game_object.hpp  model.hpp  resource_manager.hpp  shader.hpp  sprite_renderer.hpp  tetromino.hpp  texture.hpp  window.hpp
include/glad/: glad.h
resources/textures/: Xodo.html  background.xcf
resources/textures/Xodo_files/: ReaderControl.html  saved_resource.html
src/: CMakeLists.txt  \  block.cpp  controller.cpp  fragment_shader.glsl  game.cpp  game_object.cpp  glad.c  main-copy.cpp  main.cpp  model.cpp  resource_manager.cpp  shader.cpp  sprite_renderer.cpp  sprite_vertex_shader.glsl  tetromino.cpp  texture.cpp  vertex_shader.glsl  window.cpp
test/: CMakeLists.txt  test.cpp
textures/: template_block.xcf
